Fixed ul spacing

--- a/main.css
+++ b/main.css
@@ -28,7 +28,7 @@ body {
 
 nav {
 	width: 100%;
-	height: 50px;
+	height: 40px;
 	background: black;
 	color: white;
 	padding: 10px 0px;
@@ -52,16 +52,14 @@ nav {
 */
 nav ul {
 	display: block;
+	margin: 0px;
+	padding: 0px;
 }
 
 nav li {
 	float: left;
 	list-style-type: none;
-	padding-right:40px;
-}
-
-nav li:last-child {
-	padding-right: 0px;
+	margin: 10px 0px 10px 30px;
 }
 
 nav li a{
@@ -226,6 +224,7 @@ Classie Hamburger Button
 
 
 	}
+
 
 	nav {
 		height: 80px;
